# general-relativity-sim

./: CMakeLists.txt  DEVLOG.md  README.md  ROADMAP.md  camera.hpp  context.md  discrete_spacetime.hpp  main.cpp  metric_tensor.hpp  surface_utils.h  surface_utils.mm
physics_engine/: black_hole.hpp
shaders/: fullscreen.wgsl  raymarcher.wgsl
